# shuffleupagus

./: .gitignore  README.md  artists-example.yaml  config-example.yaml  pyproject.toml  shuffleupagus.py
src/shuffleupagus/: shuffleupagus.py
src/shuffleupagus/core/: cache.py  config.py  model.py  util.py
src/shuffleupagus/services/appleMusic/: __init__.py  model.py  service.py
src/shuffleupagus/services/spotify/: __init__.py  model.py  service.py
